@@ -1,0 +1,5 @@
+
+
+from reahl.doc.examples.howtos.eventresult.eventresult import AddressBookUI
+
+web.site_root = AddressBookUI
