@@ -1,0 +1,3 @@
+[build-system]
+requires = ["setuptools >= 51.0.0", "wheel","setuptools-git >= 1.1", "pytest-runner", "toml", "reahl-component-metadata"]
+build-backend = "setuptools.build_meta"
