@@ -1,0 +1,29 @@
+[metadata]
+name = eventresult
+version = 0.1
+
+[options]
+py_modules = 
+  eventresult
+
+install_requires = 
+  reahl-web>=6.1,<6.2
+  reahl-component>=6.1,<6.2
+  reahl-sqlalchemysupport>=6.1,<6.2
+  reahl-sqlitesupport>=6.1,<6.2
+  reahl-web-declarative>=6.1,<6.2
+
+tests_require = 
+  pytest>=3.0
+  reahl-tofu
+  reahl-stubble
+  reahl-dev
+  reahl-webdev
+  reahl-browsertools
+
+component = 
+  persisted = [
+    "reahl.doc.examples.howtos.eventresult.eventresult:Address"
+  ]
+  
+
